<resources>
    <string name="app_name">Swurja</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="title_slide1">Swipeable Tabs</string>
    <string name="desc_slide1">Easily switch between maps with just one swipe</string>
    <string name="title_slide2">Solar map</string>
    <string name="desc_slide2">View the radiation levels and other solar related details</string>
    <string name="title_slide3">Wind map</string>
    <string name="desc_slide3">Determine wind energy and other wind related details</string>
    <string name="title_slide4">Hybrid Map</string>
    <string name="desc_slide4">View both the map to get an average estimation of solar and wind energy</string>
    <string name="title_activity_maps">Map</string>

   <!-- SolarMap Strings -->
    <string name="infowindow_latitude">Latitude :</string>
    <string name="infowindow_latitude_value">0.0</string>
    <string name="infowindow_longitude">Longitude :</string>
    <string name="infowindow_longitude_value">0.0</string>
    <string name="infowindow_state">State :</string>
    <string name="infowindow_state_value">____</string>
    <string name="infowindow_district">District :</string>
    <string name="infowindow_district_value">____</string>
    <string name="infowindow_taluk">Taluk :</string>
    <string name="infowindow_taluk_value">____</string>
    <string name="infowindow_ghi">GHI (kWh/sq.m/year) :</string>
    <string name="infowindow_ghi_value">0.0</string>
    <string name="infowindow_dhi">DHI (kWh/sq.m/year) :</string>
    <string name="infowindow_dhi_value">0.0</string>
    <string name="infowindow_dni">DNI (kWh/sq.m/year) :</string>
    <string name="infowindow_dni_value">0.0</string>
    <string name="infowindow_cuf">CUf (%) :</string>
    <string name="infowindow_cuf_value">0.0</string>
    <string name="infowindow_locality">Locality :</string>
    <string name="infowindow_locality_values">____</string>
    <string name="out_of_india">Please select an location within India</string>
    <string name="latitude">Latitude :</string>
    <string name="longitude">Longitude :</string>
    <string name="fetch">FETCH</string>
    <string name="gti_value">GTI (kWh/sq.m/year) :</string>
    <string name="ghi_value">0.0</string>
    <string name="area">AREA (sq.m):</string>
    <string name="panel">PANEL :</string>
    <string name="calculate">CALCULATE</string>
    <string name="results">RESULTS</string>
    <string name="power_plant_capacity">Power Plant Capacity (kW):</string>
    <string name="power_plant_capacity_value">0.0</string>
    <string name="kwh_sq_m_year">(kWh/sq.m/year)</string>
    <string name="annual_energy_production">Annual Energy Production :</string>
    <string name="aep_value">0.0</string>
    <string name="total_energy_generated_in_25_years">Total Energy Generated in 25 Years (kWh/sq.m/year)   :</string>
    <string name="total_energy_generated_25_year_value">0.0</string>
    <string name="financial_savings">Financial Savings (₹) :</string>
    <string name="financial_savings_value">0.0</string>
    <string name="capacity_utilization_factor">Capacity Utilization Factor (%) :</string>
    <string name="cuf_value">0.0</string>
    <string name="exceedence_probability">Exceedence Probability</string>
    <string name="p50_kwh_sq_m_year">P50 (kWh/sq.m/year) :</string>
    <string name="P50_value">0.0</string>
    <string name="p70_kwh_sq_m_year">P70 (kWh/sq.m/year) :</string>
    <string name="P70_value">0.0</string>
    <string name="p90_kwh_sq_m_year">P90 (kWh/sq.m/year) :</string>
    <string name="P90_value">0.0</string>
    <string name="co2_level_mitigated">CO2 level Mitigated (kg):</string>
    <string name="co2_level_value">0.0</string>
    <string name="position_value">0.0</string>
    <string name="position">Position :</string>
    <string name="gti">GTI :</string>
    <string name="_0_0">0.0</string>
    <string name="zero">0.0</string>
    <string name="aep">AEP(MW):</string>
    <string name="latitude_results">Latitude :</string>
    <string name="longitude_results">Longitude :</string>
    <string name="locality_results">Locality :</string>
    <string name="empty_string">____</string>
    <string name="lifetime_of_plant">LIFETIME OF PLANT :</string>
    <string name="latitude_results_value">0.0</string>
    <string name="longitude_results_value">0.0</string>
    <string name="ghi">GHI (kWh/sq.m/year) :</string>
</resources>
