<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="niwe.swurja.CalculationResults">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="26dp"
        android:text="@string/results"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="13dp"
        android:text="@string/power_plant_capacity"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/textView1"
        android:text="@string/power_plant_capacity_value"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="11dp"
        android:layout_toStartOf="@+id/textView5"
        android:text="@string/annual_energy_production"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:layout_marginStart="23dp"
        android:text="@string/kwh_sq_m_year"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignStart="@+id/textView5"
        android:text="@string/aep_value"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="14dp"
        android:layout_toStartOf="@+id/textView12"
        android:text="@string/total_energy_generated_in_25_years"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView12"
        android:layout_alignTop="@+id/textView13"
        android:text="@string/total_energy_generated_25_year_value"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView6"
        android:layout_below="@+id/textView13"
        android:layout_marginTop="20dp"
        android:text="@string/financial_savings"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView15"
        android:layout_toEndOf="@+id/textView13"
        android:text="@string/financial_savings_value"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView15"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="24dp"
        android:layout_toStartOf="@+id/textView16"
        android:text="@string/capacity_utilization_factor"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView17"
        android:layout_alignBottom="@+id/textView17"
        android:layout_toEndOf="@+id/textView13"
        android:text="@string/cuf_value"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView17"
        android:layout_marginTop="14dp"
        android:text="@string/exceedence_probability"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView15"
        android:layout_below="@+id/textView19"
        android:layout_marginTop="14dp"
        android:text="@string/p50_kwh_sq_m_year"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView20"
        android:layout_toEndOf="@+id/textView13"
        android:text="@string/P50_value"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView6"
        android:layout_below="@+id/textView20"
        android:layout_marginTop="13dp"
        android:text="@string/p70_kwh_sq_m_year"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView22"
        android:layout_toEndOf="@+id/textView13"
        android:text="@string/P70_value"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView22"
        android:layout_below="@+id/textView22"
        android:layout_marginTop="12dp"
        android:text="@string/p90_kwh_sq_m_year"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView23"
        android:layout_alignTop="@+id/textView24"
        android:text="@string/P90_value"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView6"
        android:layout_below="@+id/textView24"
        android:layout_marginTop="12dp"
        android:text="@string/position"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView26"
        android:layout_toEndOf="@+id/textView13"
        android:text="@string/position_value"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignEnd="@+id/textView26"
        android:layout_below="@+id/textView26"
        android:layout_marginTop="11dp"
        android:text="@string/co2_level_mitigated"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView27"
        android:layout_alignTop="@+id/textView28"
        android:text="@string/co2_level_value"
        android:textSize="16sp" />

</RelativeLayout>
